fix: harden api routes and sync deployed skeleton build

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prebuild": "cp lexnotes-skeleton.html public/lexnotes-skeleton.html",
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start -p 3000",
+    "sync:skeleton": "cp lexnotes-skeleton.html public/lexnotes-skeleton.html"
   },
   "dependencies": {
     "@supabase/supabase-js": "latest",
